# August-Robotics-hardware-test-station

./: .gitignore  README.en.md  README.md  changelog.rst
.gitee/: PULL_REQUEST_TEMPLATE.md
assemble_tools/: CMakeLists.txt  package.xml  readme.md  setup.py
assemble_tools/A_相机/: A1_大小相机左右对齐.sh  A2_大相机激光对齐.sh  A3_小相机锐度.sh  A4_大相机锐度.sh
assemble_tools/B_导航站/: B0_初始化.sh  B1_GS大小相机上下夹角.sh  B2_GS大小相机左右对齐_带电机.sh  B3_GS竖直零点.sh  B4_IS偏离测量.sh  B5_大相机激光对齐_带电机.sh  B6_GS大相机锐度.sh  B7_GS小相机锐度.sh  B8_GS小相机曝光时间.sh  B9_GS大相机曝光时间.sh
assemble_tools/C_指南站/: C0_初始化.sh  C10_CB_conn_test.py  C1_CB大小相机上下夹角.sh  C2_CB大小相机左右对齐_带电机.sh  C3_CB竖直零点.sh  C4_电机零点补偿.sh  C5_设备写地址工具.py  C6_CB大相机锐度.sh  C7_CB小相机锐度.sh  C8_CB小相机曝光时间.sh  C9_CB大相机曝光时间.sh
assemble_tools/D_声呐/: DYP_sonar_checker.py  DYP_sonar_unit_writer copy.py  DYP_sonar_unit_writer.py  README.md  soanr_tools.sh  sonar_config.yaml  test_SONAR_DYP.ipynb  test_sonar.sh  write_sonar_address.py
assemble_tools/E_小车/: E1_推进率检测.sh  E2-2_IMU标定.sh
bb_tools/: .gitignore  CMakeLists.txt  README.md  package.xml  requirements.txt
bb_tools/docker/: Dockerfile  README.md  common-services.yml  docker-compose-run-boothbot.yml  docker-compose.yml
bb_tools/docker/boothbot_docker/: Dockerfile  Dockerfile.lionel  build.bash  requirements_py2.txt  ros_entrypoint.sh
bb_tools/docker/scripts/: build.bash  simulation-env-setup.sh
bb_tools/docker_v2.x/: docker-compose.yml
bb_tools/from_v3_repo/config_templates/: install_ros_kinetic_ustc.sh
bb_tools/from_v3_repo/config_templates/chrony_server/: chrony.conf
bb_tools/from_v3_repo/git_hooks/: post-merge.sample
bb_tools/from_v3_repo/log_center/: remote_trans.sh  usb_mount.sh
bb_tools/from_v3_repo/log_center/full_log_parser/: format_data.py  utils.py
bb_tools/from_v3_repo/log_center/full_log_parser/tests/: test_dataparser.py
bb_tools/from_v3_repo/log_center/full_log_parser/tests/fixtures/: exception_list.csv  formatted_file.csv
bb_tools/from_v3_repo/log_center/parser/: parse.py
bb_tools/from_v3_repo/remote_access/: analysis_report.py  lan_port_monitor.sh  local_settings.py.sample
bb_tools/from_v3_repo/remote_access/manual_mifi_test/: big_mifi_test.py  small_mifi_test.py
bb_tools/src/: bag_cleanup.sh  bag_report.bash  bag_report.sh  dash_v2.py  errcode.py  errorcode_helper.py  logger.py  quick_report.sh  rosbag-record.bash  rostopic_helpers.py
bb_tools/src/from_v3_repo/: remove_baskslash_r.py  sync_code.sh
bb_tools/src/from_v3_repo/config_templates/: requirement.txt  swmaster.sh
bb_tools/src/from_v3_repo/config_templates/chrony_client/: chrony.conf
bb_tools/src/from_v3_repo/log_center/: SETUP.rst  sync_log.sh  usb.sh
bb_tools/src/from_v3_repo/log_center/full_log_parser/: dataparser.py  extractor.py
bb_tools/src/from_v3_repo/log_center/full_log_parser/tests/: test_extractor.py  test_formatdata.py
bb_tools/src/from_v3_repo/log_center/full_log_parser/tests/fixtures/: preprocess_data_file_exception_present.csv  preprocess_data_file_success.csv
bb_tools/src/from_v3_repo/remote_access/: README.md  analysis_report.py  config.yml  remote_access.py  remote_access_i5.sh  remote_access_large.sh  remote_access_small.sh  settings.py  setup_script.sh
bb_tools/src/from_v3_repo/remote_access/manual_mifi_test/: README.md
bb_tools/src/from_v3_repo/remote_access/tests/: conftest.py  test_analysis_report.py
bb_tools/src/from_v3_repo/tools/: package.xml
bb_tools/src/from_v3_repo/tools/scripts/tools/: change_binding_rules.sh  dashboard_lionel.py  diagnose.md  install_firmware_update_tool.sh  port_diagnose_cb.py  port_diagnose_gs.py  port_diagnose_lionel.py  test_chassis_to_board.sh  test_inverse_speed.py  utils.py
boothbot_calibration_tools/: CMakeLists.txt  package.xml  setup.py
boothbot_dashboard/: CMakeLists.txt  package.xml
boothbot_debug_gui/: CMakeLists.txt  README.md  package.xml
boothbot_debug_gui/include/ros_boothbot_debug_gui/: ncurses_utils.h  ros_boothbot_debug_gui.h
boothbot_debug_gui/launch/: launch_boothbot_debug_gui.launch
boothbot_debug_gui/src/: ncurses_utils.cpp  ros_boothbot_debug_gui.cpp  ros_node.cpp
boothbot_debug_tools/: resort_current_folder.sh
boothbot_fleet_tools/: CMakeLists.txt  README.md  package.xml
boothbot_reporter/: CMakeLists.txt  package.xml  setup.py
boothbot_simulation/: CMakeLists.txt  README.md  changelog.md  package.xml  setup.py
boothbot_simulation_v2.9/: CMakeLists.txt  README.md  package.xml
docker/: README.md
lionel_gen_report_tools/: README.md  gen_report.py  greb_logs_from_remote.py
meterial_inspection_tools/: CMakeLists.txt  package.xml  setup.py
sw_tools/: CMakeLists.txt  README.md  p4.md  package.xml
tools/: CMakeLists.txt  setup.py
(+374 files in other folders)
