<?xml version="1.0"?>
<package format="2">
  <name>bb_tools</name>
  <version>0.0.0</version>
  <description>The bb_debug package</description>

  <maintainer email="augbooth@todo.todo">augdisi</maintainer>
  <license>TODO</license>

  <!-- No other dependency there as this is a Python only repo -->
  <!-- All msg/srv definitions are loaded dynamically  -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
