<package format="2">
<name>boothbot_debug_gui</name>
<version>0.0.0</version>
<description>The boothbot debug gui</description>
<maintainer email="roy.zhang@augustrobotics.com">Roy Zhang</maintainer>
<license>August Robotics</license>
<buildtool_depend>catkin</buildtool_depend>
<depend>roscpp</depend>
<depend>boothbot_msgs</depend>
<depend>augustbot_msgs</depend>
<depend>message_filters</depend>
<depend>nav_msgs</depend>
<depend>sensor_msgs</depend>
</package>
